@@ -318,68 +318,70 @@
     <page id="library-page" flex="1" hidden="true">
       <hbox flex="1">
 	<vbox class="library-left">
+	  <box class="library-left-stuffer" style="height: 10px;" />
 	  <richlistbox class="library-menu">
-	    <richlistitem id="library-menuitem-local" class="library-menuitem" 
-			  style="background-color: white;" onclick="selectLibraryMenu(this.id);">
+	    <richlistitem id="library-menuitem-local" onclick="selectLibraryMenu(this.id);">
 	      <description>My Library</description>
 	    </richlistitem> 
-	    <richlistitem id="library-menuitem-remote" class="library-menuitem" onclick="selectLibraryMenu(this.id);">
+	    <richlistitem id="library-menuitem-remote" onclick="selectLibraryMenu(this.id);">
 	      <description>Get New Files</description>
 	    </richlistitem>
 	  </richlistbox>
-	  <vbox class="library-filter" style="-moz-border-radius: 5px 5px 0px 0px; margin: 10px 10px 2px 10px;">
-	    <label value="Search ZIM files"/>
-	    <textbox id="library-filter-search" oninput="populateBookList()"/>
-	  </vbox>
-	  <vbox class="library-filter" style="margin: 0px 10px 2px 10px;">
-	    <label value="Sort by"/>
-	    <menulist id="library-sortby" oncommand="populateBookList()">
-	      <menupopup>
-		<menuitem label="Title" value="title" selected="true"/>
-		<menuitem label="Size" value="size"/>
-		<menuitem label="Date" value="date"/>
-		<menuitem label="Author" value="creator"/>
-		<menuitem label="Publisher" value="publisher"/>
-	      </menupopup>
-	    </menulist>
-	  </vbox>
-	  <vbox class="library-filter" style="-moz-border-radius: 0px 0px 5px 5px; margin: 0px 10px 10px 10px;">
-	    <label value="Filter by"/>
-
-	    <label value="▾ File size"/>
-	    <box style="margin-left: 10px; font-size: smaller;" align="center">
-	      <label value="Less than"/>
-	      <textbox id="library-content-maxsize" size="2" type="number" min="0" max="99" onchange="populateBookList()"/>
-	      <label value="GB"/>
-	    </box>
-
-	    <label value="▾ Language"/>
-	    <box style="margin-left: 10px; font-size: smaller;" align="center">
-	      <menulist id="library-filter-language" oncommand="populateBookList()" flex="1">
+	  
+	  <vbox class="library-left-stuffer" flex="1">
+	    <vbox class="library-filter" style="-moz-border-radius: 5px 5px 0px 0px; margin: 10px 10px 2px 10px;">
+	      <label value="Search ZIM files"/>
+	      <textbox id="library-filter-search" oninput="populateBookList()"/>
+	    </vbox>
+	    <vbox class="library-filter" style="margin: 0px 10px 2px 10px;">
+	      <label value="Sort by"/>
+	      <menulist id="library-sortby" oncommand="populateBookList()">
 		<menupopup>
-		  <menuitem label="All" value=""/>
-		</menupopup>
-	      </menulist>
-	    </box>
-
-	    <label value="▾ Author(s)"/>
-	    <vbox style="margin-left: 10px; font-size: smaller;">
-	      <menulist id="library-filter-creator" oncommand="populateBookList()" flex="1">
-		<menupopup>
-		  <menuitem label="All" value=""/>
+		  <menuitem label="Title" value="title" selected="true"/>
+		  <menuitem label="Size" value="size"/>
+		  <menuitem label="Date" value="date"/>
+		  <menuitem label="Author" value="creator"/>
+		  <menuitem label="Publisher" value="publisher"/>
 		</menupopup>
 	      </menulist>
 	    </vbox>
-
-	    <label value="▾ Publisher"/>
-	    <vbox style="margin-left: 10px; font-size: smaller;">
-	      <menulist id="library-filter-publisher" oncommand="populateBookList()" flex="1">
-		<menupopup>
-		  <menuitem label="All" value=""/>
-		</menupopup>
-	      </menulist>
+	    <vbox class="library-filter" style="-moz-border-radius: 0px 0px 5px 5px; margin: 0px 10px 10px 10px;">
+	      <label value="Filter by"/>
+	      
+	      <label value="▾ File size"/>
+	      <box style="margin-left: 10px; font-size: smaller;" align="center">
+		<label value="Less than"/>
+		<textbox id="library-content-maxsize" size="2" type="number" min="0" max="99" onchange="populateBookList()"/>
+		<label value="GB"/>
+	      </box>
+	      
+	      <label value="▾ Language"/>
+	      <box style="margin-left: 10px; font-size: smaller;" align="center">
+		<menulist id="library-filter-language" oncommand="populateBookList()" flex="1">
+		  <menupopup>
+		    <menuitem label="All" value=""/>
+		  </menupopup>
+		</menulist>
+	      </box>
+	      
+	      <label value="▾ Author(s)"/>
+	      <vbox style="margin-left: 10px; font-size: smaller;">
+		<menulist id="library-filter-creator" oncommand="populateBookList()" flex="1">
+		  <menupopup>
+		    <menuitem label="All" value=""/>
+		  </menupopup>
+		</menulist>
+	      </vbox>
+	      
+	      <label value="▾ Publisher"/>
+	      <vbox style="margin-left: 10px; font-size: smaller;">
+		<menulist id="library-filter-publisher" oncommand="populateBookList()" flex="1">
+		  <menupopup>
+		    <menuitem label="All" value=""/>
+		  </menupopup>
+		</menulist>
+	      </vbox>
 	    </vbox>
-
 	  </vbox>
 	</vbox>
 	<box class="library-content" flex="1">
