@@ -493,19 +493,39 @@ tab[selected="true"] label {
     width: 280px;
 }
 
+.library-left-stuffer {
+    border-color: #777777; 
+    border-width: 0px 2px 0px 0px; 
+    border-style: solid;
+}
+
 .library-menu {
     background: -moz-linear-gradient(left, #b8b5b0, #d2d2d2);
-    padding-top: 10px;
+    padding-top: 0px;
     padding-right: 0px;
     width: 200px;
 }
 
-.library-menuitem {
+.library-menuitem-unselected, .library-menuitem-selected {
     margin: 0px 0px 0px 10px;
     padding: 5px;
     font-size: 110%;
     color: black;
     -moz-border-radius: 5px 0px 0px 5px;
+}
+
+.library-menuitem-unselected {
+    background-color: transparent;
+    border-color: #777777; 
+    border-width: 0px 2px 0px 0px; 
+    border-style: solid;
+}
+
+.library-menuitem-selected {
+    border-color: #777777;
+    border-width: 2px 0px 2px 2px;
+    border-style: solid;
+    background-color: Highlight;
 }
 
 .library-filter {
