@@ -8,6 +8,7 @@ Kiwix 0.9 beta5
 * Add the support of the "publisher" ZIM Metadata
 * Fix many localisation files which were broken due to a buggy script (ID: 3440627)
 * Fix a wrong behaviour in case of two portable kiwix consecutive runs (ID: 3442083)
+* Improve the library menus visibility (ID: 3439109)
 
 Kiwix 0.9 beta4
 * Fix regression, menu "last open" where not working anymore
